--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Wifiapp</title>
-  <base href="/">
+  <!-- <base href="/"> -->
+  /parknow-pig-latin/
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
  
@@ -14,7 +15,7 @@
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
 
 
-</head>
+</head> 
 <body>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
