--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>Wifiapp</title>
-  <!-- <base href="/"> -->
+  <base href="/">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
- 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-
-
-</head> 
-<body>
+  
+  <link rel="preconnect" href="https://fonts.gstatic.com">                                     
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>     
+<body class="mat-typography"> 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
      body{
